--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ opencv-contrib-python-headless==4.10.0.84
 numpy==2.0.1
 gspread==6.1.2  # force-reinstall
 google-auth==2.33.0  # force-reinstall
+google-auth-oauthlib
+google-auth-httplib2
